# kuksa.val.feeders

./: .pre-commit-config.yaml  README.md
.github/actions/post-container-location/: action.yml
.github/workflows/: check_license.yaml  check_push_rights.yml  clean-images.yml  dbc2val_feeder-release.yml  dbc2val_feeder.yml  dbc2val_feeder_release.yml  gps_feeder.yml  kuksa_csv_provider.yml  kuksa_dbc_feeder.yml  kuksa_dbc_feeder_release.yml  kuksa_dds_feeder.yml  kuksa_gps_feeder.yml  kuksa_someip_feeder.yml  kuksa_someip_feeder_release.yml  pre-commit.yml  someip2val_build.yml  val-release.yml
carTelemetry2val/: carTelemetry_Kuksa2HONO.py  carTelemetry_feeder.py
carTelemetry2val/config/: carTelemetry_feeder.ini
csv_provider/: Dockerfile  README.md  provider.py  recorder.py  requirements.txt  signals.csv
dbc2val/: CHANGELOG.md  Dockerfile  Model3CAN.dbc  README.md  Readme.md  canplayer.py  createvcan.sh  databroker.py  dbc2vssmapper.py  dbc_default_values.json  dbc_overlay.vspec  dbcfeeder.py  dbcreader.py  docker-build.sh  elm2canbridge.py  j1939reader.py  mapping.md  mapping.yml  requirements-dev.txt  requirements.in  requirements.txt  update-protobuf.sh  vss_dbc.json
dbc2val/config/: dbc_feeder.ini
dbc2val/dbcfeederlib/: __init__.py  canclient.py  canmessage.py  canplayer.py  canreader.py  clientwrapper.py  databroker.py  databrokerclientwrapper.py  dbc2vssmapper.py  dbcparser.py  dbcreader.py  elm2canbridge.py  j1939reader.py  serverclientwrapper.py
dbc2val/mapping/: mapping.md
dbc2val/mapping/vss_3.1.1/: dbc_overlay.vspec  vss_dbc.json
dbc2val/mapping/vss_4.0/: dbc_overlay.vspec  vss_dbc.json
dbc2val/overlay/: README.md
dbc2val/test/test_arguments/: test_arguments.py
dbc2val/test/test_dbc/: dbcparser_test.py  duplicate_signal_name.kcd  test1_1.dbc  test1_1.kcd  test1_2.dbc  test1_2.kcd  test_dbc.py  test_kcd.py
dbc2val/test/test_example_mapping/: test_example_mapping.py
dbc2val/test/test_j1939/: simple_mapping.json  test_j1939.py
dbc2val/test/test_mapping_error/: mapping_for_ambiguous_signal.json  mapping_for_unused_ambiguous_signal.json  test_mapping_error.py  test_unknown_transform.json  test_unknown_transform.vspec
dbc2val/test/test_mapping_transform/: test.json  test.vspec  test_mapping_transform.py
dbc2val/test/test_readers/: j1939.kcd  simple_mapping.vspec  standard_can.kcd  test_readers.py
dbc2val/transforms/: mapping.py  math.py
dds2val/: Dockerfile  OverallSequence.puml  README.md  __init__.py  ddsprovider.py  make_executable.sh  setup_arm_build.sh
dds2val/ddsproviderlib/: helper.py
dds2val/ddsproviderlib/idls/: generate_py_dataclass.sh  setup.py
dds2val/kml/: directions.kml
dds2val/mapping/: README.md  latest
dds2val/mapping/vss_4.0/: mapping.yml
dds2val/requirements/: requirements-kml.txt  requirements-test.txt  requirements.txt
dds2val/src/: Dockerfile  OverallSequence.puml  README.md  __init__.py  databroker.py  dds_kmlreplay.py  ddsfeeder.py  make_executable.sh  mapping.yml  requirements.txt  vss2ddsmapper.py
dds2val/src/idls/: README.md  generate_py_dataclass.sh  setup.py
dds2val/tests/: README.md  __init__.py  conftest.py  requirements.txt
dds2val/tests/integration/: test_ddsprovider_int.py
ecal2val/: README.md  cast_func.py  ecal2val.py  mock_data.txt  mock_publisher.py
ecal2val/proto/: proto_struct.proto  types.proto
ecal2val/proto_struct/: vss_data.proto
fone2val/: README.md  carTelemetry_feeder.py
fone2val/VSS/: vss.json
fone2val/config/: carTelemetry_feeder.ini
gps2val/: Dockerfile  entrypoint.sh  gpsd_feeder.py  readme.md  requirements.txt
gps2val/config/: gpsd_feeder.ini
replay/: README.md  _replay.py  config.ini  testlog.csv
someip2val/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-debug.sh  build-release.sh  conanfile.txt  docker-build.sh  docker-run-client.sh  docker-run-service.sh  vscode-conan.sh
someip2val/cert/: .gitignore  README.md  someip2val.json  someip2val.token
someip2val/config/: someip_feeder-proxy.json  someip_feeder.json  someip_wiper_client-proxy.json  someip_wiper_client.json  someip_wiper_service.json
someip2val/doc/: .gitignore  generate-vsomeip-guide.sh  vsomeip.md
someip2val/doc/vsomeip-docker/: README.md  docker-build.sh  docker-run-service.sh
someip2val/doc/vsomeip-docker/vsomeip/config/: docker-notify-client.json  docker-notify-service.json  notify-client.json  notify-service.json
someip2val/doc/vsomeip-docker/vsomeip/examples/: setup-routing.sh
someip2val/docker/: Dockerfile  docker-run-client.sh
someip2val/docker/vsomeip/: CMakeLists.txt
someip2val/docker/vsomeip/config/: vsomeip_wiper_poc_client-local.json  vsomeip_wiper_poc_client.json  vsomeip_wiper_poc_client_RPI.json  vsomeip_wiper_poc_service.json  vsomeip_wiper_poc_service_RPI.json
someip2val/docker/vsomeip/examples/: notify-sample.cpp  run-client.sh  run-service.sh  setup-routing.sh  subscribe-sample.cpp
someip2val/patches/: 000-cmake-reduce-gcc-warnings.patch  001-vsomeip-logger-fixes.patch  002-vsomeip-default-major-change.patch  003-vsomeip-application-debugs.patch
someip2val/proto/kuksa_data_broker/kuksa/val/v1/: types.proto  val.proto
someip2val/proto/kuksa_data_broker/sdv/databroker/v1/: types.proto
someip2val/src/: CMakeLists.txt
someip2val/src/examples/wiper_service/: CMakeLists.txt  wiper_client.cc  wiper_server.cc  wiper_sim.cc  wiper_sim.h
someip2val/src/lib/broker_feeder/: CMakeLists.txt  actuator_subscriber.cc  actuator_subscriber.h  collector_client.cc  collector_client.h  data_broker_feeder.cc  data_broker_feeder.h  simple_log.h
someip2val/src/lib/someip_client/: CMakeLists.txt  sample_ids.h  someip_client.cc  someip_client.h
someip2val/src/lib/wiper_poc/: CMakeLists.txt  wiper-ids.h  wiper_poc.cc  wiper_poc.h
someip2val/src/someip_feeder/: CMakeLists.txt  main.cc  someip_kuksa_adapter.cc  someip_kuksa_adapter.h
someip2val/toolchains/: target_rpi_Debug  target_rpi_Release
someip2val/vsomeip/config/: docker-notify-service.json
someip2val/vsomeip/examples/: notify-sample.cpp  run-service.sh  subscribe-sample.cpp
(+9 files in other folders)
